@@ -1564,13 +1564,8 @@ AC_ARG_ENABLE(alignment-check,
    fi
    ],
   [
-    if test "$bx_cpu_level" -gt 3; then
-      AC_MSG_RESULT(yes)
-      AC_DEFINE(BX_SUPPORT_ALIGNMENT_CHECK, 1)
-    else
-      AC_MSG_RESULT(no)
-      AC_DEFINE(BX_SUPPORT_ALIGNMENT_CHECK, 0)
-    fi
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_SUPPORT_ALIGNMENT_CHECK, 0)
     ]
   )
 
